--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>Fast</title>
 </head>
 <body>
     <div class="container">
-        <h1>Verificador de Site</h1>
-        <p>Insira o Url do site que voce deseja verificar</p>
+        <h1>Check Site</h1>
+        <p>Put Url to verify</p>
 
         <div>
             <input type="text" id="urlInput" placeholder="https://google.com">
-            <button onclick="checkSite()">Verificar</button>
+            <button onclick="checkSite()">Verify</button>
         </div>
 
         <div id="result"></div>
