add nmap service

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,11 +14,13 @@
         <div>
             <input type="text" id="urlInput" placeholder="https://google.com">
             <button onclick="checkSite()">Verify</button>
+            <button class="scan" onclick="scanPorts()">Port Scan</button>
         </div>
 
         <div id="result"></div>
 
         <script src="/static/js/check_site.js"></script>
+        <script src="/static/js/scan_ports.js"></script>
 
     </div>
 </body>
