start dns_resolv part

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,6 +15,7 @@
             <input type="text" id="urlInput" placeholder="https://google.com">
             <button onclick="checkSite()">Verify</button>
             <button class="scan" onclick="scanPorts()">Port Scan</button>
+			<button class="dns_resolv" onclick="dns_resolv()">DNS_Resolv</button>
         </div>
 
         <div id="result"></div>
