--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,6 +22,7 @@
 
         <script src="/static/js/check_site.js"></script>
         <script src="/static/js/scan_ports.js"></script>
+		<script src="/static/js/dns_resolv.js"></script>
 
     </div>
 </body>
